--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -128,7 +128,6 @@
     <!-- Java Script -->
     <script src="/bower/jquery-2.1.4.min/index.js"></script>
     <script src="/bower/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="/bower/gmap3/dist/gmap3.min.js"></script>
     <script src="/bower/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
     <script src="/bower/bigSlide/dist/bigSlide.min.js"></script>
@@ -143,12 +142,15 @@
     <script src="/javascripts/owl-carousel.js"></script>
     <script src="/bower/bxslider-4/dist/jquery.bxslider.min.js"></script>
     <script src="/bower/jquery_appear/jquery.appear.js"></script>
-    <script src="/bower/waypoints/lib/shortcuts/sticky.min.js"></script>
+    <script src="/javascripts/sticky.js"></script>
     <script src="/bower/jquery-prettyPhoto/js/jquery.prettyPhoto.js"></script>
     <script src="/bower/isotope/dist/isotope.pkgd.min.js"></script>
     <script src="/javascripts/wow-min.js"></script>
     <script src="/bower/classie/classie.js"></script>
     <script src="/javascripts/main.js"></script>
+
+    <script src="/javascripts/libraries/book.js"></script>
+    <!-- Java Script -->
 
 </body>
 </html>
