--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -23,11 +23,11 @@
     <script src="/bower/tether/dist/js/tether.min.js"></script>
 
     <!-- FontsOnline -->
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:300,300italic,400italic,400,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic,900italic,900,100italic,100' rel='stylesheet' type='text/css'>
+    <link href='/bower/Merriweather/merriweather.css' rel='stylesheet' type='text/css'>
+    <link href='/bower/Lato/lato.css' rel='stylesheet' type='text/css'>
 
     <!-- JavaScripts -->
-    <script src="/bower/modernizr/src/Modernizr.js"></script>
+    <script src="/javascripts/modernizr.js"></script>
 </head>
 <body>
 
