--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,154 +1,59 @@
-    <!-- Footer -->
-    <footer id="footer">
-
-        <!-- Footer columns -->
-        <div class="footer-columns">
-            <div class="container">
-
-                <!-- Columns Row -->
-                <div class="row">
-
-                    <!-- Footer Column -->
-                    <div class="col-lg-4 col-sm-6">
-                        <div class="footer-column logo-column">
-                            <a href="index-1.html"><img src="images/logo-1.png" alt=""></a>
-                            <p>Find out how to prepare your book for an editor with these 4 writing tips! The editing process can be a wonderful opportunity for writers.</p>
-                            <ul class="address-list">
-                                <li><i class="fa fa-home"></i>888 South Avenue Street, New York City.</li>
-                                <li><i class="fa fa-phone"></i>00+123-456-789</li>
-                                <li><i class="fa fa-envelope"></i>contact@onlinbookshops.com</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- Footer Column -->
-
-                    <!-- Footer Column -->
-                    <div class="col-lg-2 col-sm-6">
-                        <div class="footer-column footer-links">
-                            <h4>Information</h4>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">shop</a></li>
-                                <li><a href="#">blog</a></li>
-                                <li><a href="#">categories</a></li>
-                                <li><a href="#">Pages</a></li>
-                                <li><a href="#">contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- Footer Column -->
-
-                    <!-- Footer Column -->
-                    <div class="col-lg-2 col-sm-6">
-                        <div class="footer-column footer-links">
-                            <h4>Shipping info</h4>
-                            <ul>
-                                <li><a href="#">New Products</a></li>
-                                <li><a href="#">top Sellers</a></li>
-                                <li><a href="#">Manufactirers</a></li>
-                                <li><a href="#">Suppliers</a></li>
-                                <li><a href="#">Special</a></li>
-                                <li><a href="#">Imported</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- Footer Column -->
-
-                    <!-- Footer Column -->
-                    <div class="col-lg-4 col-sm-6">
-                        <div class="footer-column newsletter">
-                            <h4>Weekly Newsletter</h4>
-                            <p>Get our awesome releases and latest updates with exclusive news and offers in your inbox.</p>
-                            <form class="newsletter-input">
-                                <i class="fa fa-envelope-o"></i>
-                                <input class="form-control.newsletter" type="text" placeholder="Enter Your Email">
-                                <button>SUBSCRIBE</button>
-                            </form>
-                            <p>We're on Social Networks. Follow us &amp; get in touch!</p>
-                            <ul class="social-icons">
-                                <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a class="youtube" href="#"><i class="fa fa-youtube-play"></i></a></li>
-                                <li><a class="pinterest" href="#"><i class="fa fa-pinterest-p"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- Footer Column -->
-
-                </div>
-                <!-- Columns Row -->
-
+<footer class="black-bg text-white">
+    <div class="space-60"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-4">
+                <a href="#"><img src="/images/logo.png" alt="library"></a>
+                <div class="space-20"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida, quam vitae est Sed non eros elementum nulla sodales ullamcorper.</p>
+                <div class="space-10"></div>
+                <ul class="list-inline list-unstyled social-list">
+                    <li><a href="#"><i class="icofont icofont-social-facebook"></i></a></li>
+                    <li><a href="#"><i class="icofont icofont-social-twitter"></i></a></li>
+                    <li><a href="#"><i class="icofont icofont-social-behance"></i></a></li>
+                    <li><a href="#"><i class="icofont icofont-brand-linkedin"></i></a></li>
+                </ul>
+                <div class="space-10"></div>
+                <ul class="list-unstyled list-inline tip yellow">
+                    <li><i class="icofont icofont-square"></i></li>
+                    <li><i class="icofont icofont-square"></i></li>
+                    <li><i class="icofont icofont-square"></i></li>
+                </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-1">
+                <h4 class="text-white">Contact Us</h4>
+                <div class="space-20"></div>
+                <table class="table border-none addr-dt">
+                    <tr>
+                        <td><i class="icofont icofont-social-google-map"></i></td>
+                        <td><address>3050 Universal Blvd #190 Fort Lauderdale, FL, 33331, Sydney New York City</address></td>
+                    </tr>
+                    <tr>
+                        <td><i class="icofont icofont-email"></i></td>
+                        <td>susislibrary@domain.com</td>
+                    </tr>
+                    <tr>
+                        <td><i class="icofont icofont-phone"></i></td>
+                        <td>+62 582 528 527 21</td>
+                    </tr>
+                    <tr>
+                        <td><i class="icofont icofont-globe-alt"></i></td>
+                        <td><a href="www.susislibrary.html" target="_blank">www.susislibrary.com</a></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-1">
+                <h4 class="text-white">Useful Link</h4>
+                <div class="space-20"></div>
+                <ul class="list-unstyled menu-tip">
+                    <li><a href="books.html">Costumer Service</a></li>
+                    <li><a href="books.html">Help Desk</a></li>
+                    <li><a href="books.html">Forum</a></li>
+                    <li><a href="books.html">Staff Profile</a></li>
+                    <li><a href="books.html">Live Chat</a></li>
+                </ul>
             </div>
         </div>
-        <!-- Footer columns -->
-
-        <!-- Sub Footer -->
-        <div class="sub-foorer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <p>Copyright <i class="fa fa-copyright"></i> 2005-2016 <span class="theme-color">FineLayers</span> All Rights Reserved.</p>
-                    </div>
-                    <div class="col-sm-6">
-                        <a class="back-top" href="#">Back to Top<i class="fa fa-caret-up"></i></a>
-                        <ul class="cards-list">
-                            <li><img src="images/cards/img-01.jpg" alt=""></li>
-                            <li><img src="images/cards/img-02.jpg" alt=""></li>
-                            <li><img src="images/cards/img-03.jpg" alt=""></li>
-                            <li><img src="images/cards/img-04.jpg" alt=""></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Sub Footer -->
-
-    </footer>
-    <!-- Footer -->
-
     </div>
-    <!-- Wrapper -->
-
-    <!-- Slide Menu -->
-    <% include ../shared/responive-nav.ejs %>
-    <!-- Slide Menu -->
-
-<!-- View Pages -->
-    <% include ../shared/modal-open-book-view.ejs %>
-    <!-- View Pages -->
-
-    <!-- Login Modal -->
-    <% include ../shared/modal-login.ejs %>
-    <!-- Login Modal -->
-
-    <!-- Quick View -->
-    <% include ../shared/modal-quickview.ejs %>
-    <!-- Quick View -->
-
-    <!-- Java Script -->
-    <script src="/bower/jquery-2.1.4.min/index.js"></script>
-    <script src="/bower/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <script src="/bower/gmap3/dist/gmap3.min.js"></script>
-    <script src="/bower/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
-    <script src="/bower/bigSlide/dist/bigSlide.min.js"></script>
-    <script src="/javascripts/3d-book-showcase.js"></script>
-    <script src="/bower/turn.js/turn.min.js"></script>
-    <script src="/bower/jquery-ui/jquery-ui.min.js"></script>
-    <script src="/bower/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
-    <script src="/javascripts/timeliner.js"></script>
-    <script src="/bower/parallax.js/parallax.min.js"></script>
-    <script src="/javascripts/countdown.js"></script>
-    <script src="/javascripts/countTo.js"></script>
-    <script src="/javascripts/owl-carousel.js"></script>
-    <script src="/bower/bxslider-4/dist/jquery.bxslider.min.js"></script>
-    <script src="/bower/jquery_appear/jquery.appear.js"></script>
-    <script src="/bower/waypoints/lib/shortcuts/sticky.min.js"></script>
-    <script src="/bower/jquery-prettyPhoto/js/jquery.prettyPhoto.js"></script>
-    <script src="/bower/isotope/dist/isotope.pkgd.min.js"></script>
-    <script src="/javascripts/wow-min.js"></script>
-    <script src="/bower/classie/classie.js"></script>
-    <script src="/javascripts/main.js"></script>
-
-</body>
-</html>
+    <div class="space-60"></div>
+</footer>
