--- a/views/shared/responive-nav.ejs
+++ b/views/shared/responive-nav.ejs
@@ -1,49 +1,59 @@
-<nav id="menu" class="responive-nav">
-    <a class="r-nav-logo" href="index.html"><img src="images/logo-1.png" alt=""></a>
-    <ul class="respoinve-nav-list">
-        <li>
-            <a class="triple-eff" data-toggle="collapse" href="#list-1"><i class="pull-right fa fa-angle-down"></i>Home</a>
-            <ul class="collapse" id="list-1">
-                <li><a href="index.html">home 1</a></li>
-                <li><a href="index-2.html">home 2</a></li>
-            </ul>
-        </li>
-        <li>
-            <a class="triple-eff" data-toggle="collapse" href="#list-2"><i class="pull-right fa fa-angle-down"></i>Shop</a>
-            <ul class="collapse" id="list-2">
-                <li><a href="shop.html">shop</a></li>
-                <li><a href="shop-detail.html">shop Detail</a></li>
-            </ul>
-        </li>
-        <li>
-            <a class="triple-eff" data-toggle="collapse" href="#list-3"><i class="pull-right fa fa-angle-down"></i>Blog</a>
-            <ul class="collapse" id="list-3">
-                <li><a href="blog-all-views.html">blog all views</a></li>
-                <li><a href="blog-larg.html">blog Larg</a></li>
-                <li><a href="blog-list.html">blog List</a></li>
-                <li><a href="blog-grid.html">blog Grid</a></li>
-                <li><a href="blog-detail.html">blog detail</a></li>
-            </ul>
-        </li>
-        <li>
-            <a class="triple-eff" data-toggle="collapse" href="#list-4"><i class="pull-right fa fa-angle-down"></i>Pages</a>
-            <ul class="collapse" id="list-4">
-                <li><a href="about.html">about</a></li>
-                <li><a href="gallery.html">gallery</a></li>
-                <li><a href="event-list.html">event list</a></li>
-                <li><a href="event-detail.html">event detail</a></li>
-                <li><a href="book-list.html">blog list</a></li>
-                <li><a href="book-detail.html">book detail</a></li>
-                <li><a href="404.html">404</a></li>
-            </ul>
-        </li>
-        <li>
-            <a class="triple-eff" data-toggle="collapse" href="#list-5"><i class="pull-right fa fa-angle-down"></i>author</a>
-            <ul class="collapse" id="list-5">
-                <li><a href="author.html">author</a></li>
-                <li><a href="author-detail.html">author detail</a></li>
-            </ul>
-        </li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
+<footer class="black-bg text-white">
+    <div class="space-60"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-4">
+                <a href="#"><img src="images/logo.png" alt="library"></a>
+                <div class="space-20"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida, quam vitae est Sed non eros elementum nulla sodales ullamcorper.</p>
+                <div class="space-10"></div>
+                <ul class="list-inline list-unstyled social-list">
+                    <li><a href="#"><i class="icofont icofont-social-facebook"></i></a></li>
+                    <li><a href="#"><i class="icofont icofont-social-twitter"></i></a></li>
+                    <li><a href="#"><i class="icofont icofont-social-behance"></i></a></li>
+                    <li><a href="#"><i class="icofont icofont-brand-linkedin"></i></a></li>
+                </ul>
+                <div class="space-10"></div>
+                <ul class="list-unstyled list-inline tip yellow">
+                    <li><i class="icofont icofont-square"></i></li>
+                    <li><i class="icofont icofont-square"></i></li>
+                    <li><i class="icofont icofont-square"></i></li>
+                </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-1">
+                <h4 class="text-white">Contact Us</h4>
+                <div class="space-20"></div>
+                <table class="table border-none addr-dt">
+                    <tr>
+                        <td><i class="icofont icofont-social-google-map"></i></td>
+                        <td><address>3050 Universal Blvd #190 Fort Lauderdale, FL, 33331, Sydney New York City</address></td>
+                    </tr>
+                    <tr>
+                        <td><i class="icofont icofont-email"></i></td>
+                        <td>susislibrary@domain.com</td>
+                    </tr>
+                    <tr>
+                        <td><i class="icofont icofont-phone"></i></td>
+                        <td>+62 582 528 527 21</td>
+                    </tr>
+                    <tr>
+                        <td><i class="icofont icofont-globe-alt"></i></td>
+                        <td><a href="www.susislibrary.html" target="_blank">www.susislibrary.com</a></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-1">
+                <h4 class="text-white">Useful Link</h4>
+                <div class="space-20"></div>
+                <ul class="list-unstyled menu-tip">
+                    <li><a href="books.html">Costumer Service</a></li>
+                    <li><a href="books.html">Help Desk</a></li>
+                    <li><a href="books.html">Forum</a></li>
+                    <li><a href="books.html">Staff Profile</a></li>
+                    <li><a href="books.html">Live Chat</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="space-60"></div>
+</footer>
