--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,231 +1,145 @@
-<!doctype html>
-<html class="no-js" lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content=""/>
-    <!-- Document Title -->
-    <title>FBook</title>
-
-    <!-- StyleSheets -->
-    <link rel="stylesheet" href="/bower/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/bower/components-font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/bower/animate.css/animate.min.css">
-    <link rel="stylesheet" href="/css/icomoon.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/color-1.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
-    <link rel="stylesheet" href="/css/transition.css">
-
-    <!-- Online Lib -->
-    <link rel="stylesheet" href="/bower/tether/dist/css/tether.min.css">
-    <script src="/bower/tether/dist/js/tether.min.js"></script>
-
-    <!-- FontsOnline -->
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:300,300italic,400italic,400,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic,900italic,900,100italic,100' rel='stylesheet' type='text/css'>
-
-    <!-- JavaScripts -->
-    <script src="/bower/modernizr/src/Modernizr.js"></script>
-</head>
-<body>
-
-<!-- Wrapper -->
-<div class="wrapper push-wrapper">
-
-    <!-- Header -->
-    <header id="header">
-
-        <!-- Top Bar -->
-        <div class="topbar">
-            <div class="container">
-
-                <!-- Online Option -->
-                <div class="online-option">
-                    <ul>
-                        <li><a href="#">Ha Noi</a></li>
-                        <li><a href="#">Labo</a></li>
-                        <li><a href="#">Ho Chi Minh</a></li>
-                        <li><a href="#">Da Nang</a></li>
-                    </ul>
-                </div>
-                <!-- Online Option -->
-
-                <!-- Social Icons -->
-                <div class="social-icons pull-right">
-                    <ul>
-                        <li><a class="fa fa-facebook" href="#"></a></li>
-                        <li><a class="fa fa-twitter" href="#"></a></li>
-                        <li><a class="fa fa-google-plus" href="#"></a></li>
-                        <li><a class="fa fa-pinterest-p" href="#"></a></li>
-                    </ul>
-                </div>
-                <!-- Social Icons -->
-
-                <!-- Cart Option -->
-                <div class="cart-option">
-                    <ul>
-                        <li class="add-cart"><a href="#"><i class="fa fa-shopping-bag"></i><span>3</span></a></li>
-                        <li><a href="#"><i class="fa fa-heart-o"></i>wish List 0 items</a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#login-modal"><i class="fa fa-user"></i>Login / Register</a></li>
-                    </ul>
-                </div>
-                <!-- Cart Option -->
-
-            </div>
+<header class="relative" id="sc1">
+    <!-- Header-background-markup -->
+    <div class="header-bg relative home-slide">
+        <div class="item">
+            <img src="images/slide/slide1.jpg" alt="library">
         </div>
-        <!-- Top Bar -->
-
-        <!-- Nav -->
-        <nav class="nav-holder style-1">
+        <div class="item">
+            <img src="images/slide/slide2.jpg" alt="library">
+        </div>
+        <div class="item">
+            <img src="images/slide/slide3.jpg" alt="library">
+        </div>
+        <div class="item">
+            <img src="images/slide/slide4.jpg" alt="library">
+        </div>
+    </div>
+    <!-- Mainmenu-markup-start -->
+    <div class="mainmenu-area navbar-fixed-top" data-spy="affix" data-offset-top="10">
+        <nav class="navbar">
             <div class="container">
-                <div class="mega-dropdown-wrapper">
+                <div class="navbar-header">
+                    <div class="space-10"></div>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainmenu">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!--Logo-->
+                    <a href="#sc1" class="navbar-left show"><img src="images/logo.png" alt="library"></a>
+                    <div class="space-10"></div>
+                </div>
+                <!--Toggle-button-->
 
-                    <!-- Logo -->
-                    <div class="logo">
-                        <a href="index.html"><img src="images/logo-1.png" alt=""></a>
-                    </div>
-                    <!-- Logo -->
-
-                    <!-- Search bar -->
-                    <div class="search-bar">
-                        <a href="#"><i class="fa fa-search"></i></a>
-                    </div>
-                    <!-- Search bar -->
-
-                    <!-- Responsive Button -->
-                    <div class="responsive-btn">
-                        <a href="#menu" class="menu-link circle-btn"><i class="fa fa-bars"></i></a>
-                    </div>
-                    <!-- Responsive Button -->
-
-                    <!-- Navigation -->
-                    <div class="navigation">
-                        <ul>
-                            <li class="active dropdown-icon">
-                                <a href="#"><i class="fa fa-home"></i>Home</a>
-                                <ul>
-                                    <li><a href="index.html">home 1</a></li>
-                                    <li><a href="index-2.html">home 2</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-icon">
-                                <a href="#"><i class="fa fa-shopping-bag"></i>shop</a>
-                                <ul>
-                                    <li><a href="shop.html">shop</a></li>
-                                    <li><a href="shop-detail.html">shop Detail</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-icon">
-                                <a href="#"><i class="fa fa-pencil"></i>blog</a>
-                                <ul>
-                                    <li><a href="blog-all-views.html">blog all views</a></li>
-                                    <li><a href="blog-larg.html">blog Larg</a></li>
-                                    <li><a href="blog-list.html">blog List</a></li>
-                                    <li><a href="blog-grid.html">blog Grid</a></li>
-                                    <li><a href="blog-detail.html">blog detail</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-icon mega-dropdown-holder">
-                                <a href="#"><i class="fa fa-book"></i>categories</a>
-                                <ul>
+                <!--Active User-->
+                <div class="nav navbar-right">
+                    <div class="active-user navbar-left active">
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <img src="images/active_user.png" class="img-circle img-thumbnail" alt="library" />
+                                </a>
+                                <ul class="dropdown-menu">
                                     <li>
-                                        <div class="mega-dropdown">
-                                            <div class="row">
-                                                <div class="col-sm-2">
-                                                    <div class="categories-list">
-                                                        <h6>Categories</h6>
-                                                        <a href="#">Technology</a>
-                                                        <a href="#">Fiction</a>
-                                                        <a href="#">Health &amp; fitness</a>
-                                                        <a href="#">History</a>
-                                                        <a href="#">Mystery</a>
-                                                        <a href="#">Politics &amp; current Affairs</a>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-2">
-                                                    <div class="categories-list">
-                                                        <h6>Eduacation</h6>
-                                                        <a href="#">The Rosie Effect</a>
-                                                        <a href="#">Accounting Coach</a>
-                                                        <a href="#">Al-Islam</a>
-                                                        <a href="#">American Literature</a>
-                                                        <a href="#">Antique Books</a>
-                                                        <a href="#">Baby School</a>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-2">
-                                                    <div class="categories-list">
-                                                        <h6>print top 10</h6>
-                                                        <a href="#">My Brilliant Friend</a>
-                                                        <a href="#">Everywhere I Look</a>
-                                                        <a href="#">The Rosie Project</a>
-                                                        <a href="#">The Trap</a>
-                                                        <a href="#">The High Mountains of</a>
-                                                        <a href="#">The Rosie Effect</a>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-6">
-                                                    <div class="row">
-                                                        <div class="col-sm-4">
-                                                            <div class="s-product">
-                                                                <div class="s-product-img">
-                                                                    <img src="images/products-collection/img-01.jpg" alt="">
-                                                                </div>
-                                                                <span>James oliver</span>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-sm-4">
-                                                            <div class="s-product">
-                                                                <div class="s-product-img">
-                                                                    <img src="images/products-collection/img-02.jpg" alt="">
-                                                                </div>
-                                                                <span>James oliver</span>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-sm-4">
-                                                            <div class="s-product">
-                                                                <div class="s-product-img">
-                                                                    <img src="images/products-collection/img-03.jpg" alt="">
-                                                                </div>
-                                                                <span>James oliver</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <a href="#"> <span><i class="icofont icofont-user"></i></span> Profile</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"> <span><i class="icofont icofont-notification"></i></span> Notifications</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"> <span><i class="icofont icofont-settings"></i></span> Settings</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"> <span><i class="icofont icofont-read-book"></i></span>My Books</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"> <span><i class="icofont icofont-logout"></i></span> Log Out</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li class="dropdown-icon">
-                                <a href="#"><i class="fa fa-files-o"></i>Pages</a>
-                                <ul>
-                                    <li><a href="about.html">about</a></li>
-                                    <li><a href="gallery.html">gallery</a></li>
-                                    <li><a href="event-list.html">event list</a></li>
-                                    <li><a href="event-detail.html">event detail</a></li>
-                                    <li><a href="book-list.html">book list</a></li>
-                                    <li><a href="book-detail.html">book detail</a></li>
-                                    <li><a href="404.html">404</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-icon">
-                                <a href="#"><i class="fa fa-file-text"></i>author</a>
-                                <ul>
-                                    <li><a href="author.html">author</a></li>
-                                    <li><a href="author-detail.html">author detail</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="contact.html"><i class="fa fa-fax"></i>contact</a></li>
                         </ul>
                     </div>
-                    <!-- Navigation -->
-
+                </div>
+                <!--Mainmenu list-->
+                <div class="navbar-right in fade" id="mainmenu">
+                    <ul class="nav navbar-nav nav-white text-uppercase">
+                        <li class="active">
+                            <a href="#sc1">Home</a>
+                        </li>
+                        <li>
+                            <a href="#sc2">About</a>
+                        </li>
+                        <li>
+                            <a href="#sc4">Team</a>
+                        </li>
+                        <li>
+                            <a href="#sc5">Event</a>
+                        </li>
+                        <li>
+                            <a href="#sc6">Client</a>
+                        </li>
+                        <li>
+                            <a href="books.html">Books</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
-        <!-- Nav -->
-    </header>
-    <!-- Header -->
+    </div>
+    <div class="space-100"></div>
+    <!-- Mainmenu-markup-end -->
+    <!-- Header-jumbotron -->
+    <div class="space-100"></div>
+    <div class="header-text">
+        <div class="container">
+            <div class="row wow fadeInUp">
+                <div class="col-xs-12 col-sm-10 col-sm-offset-1 text-center">
+                    <div class="jumbotron">
+                        <h1 class="text-white">More Than 458,948 Book Over Here</h1>
+                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida, quam vitae
+                            <br/> est Sed non eros elementum nulla sodales ullamcorper.</p>
+                    </div>
+                    <div class="title-bar white">
+                        <ul class="list-inline list-unstyled">
+                            <li><i class="icofont icofont-square"></i></li>
+                            <li><i class="icofont icofont-square"></i></li>
+                        </ul>
+                    </div>
+                    <div class="space-40"></div>
+                </div>
+            </div>
+            <div class="row wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 ">
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <ul class="nav nav-tabs">
+                                <li class="active"><a data-toggle="tab" href="#book">Search Book</a></li>
+                            </ul>
+                        </div>
+                        <div class="panel-body">
+                            <div class="tab-content">
+                                <div class="tab-pane fade in active" id="book">
+                                    <form action="#">
+                                        <div class="input-group">
+                                            <input type="text" class="form-control" placeholder="Enter book name">
+                                            <div class="input-group-btn">
+                                                <button type="submit" class="btn btn-primary"><i class="icofont icofont-search-alt-2"></i></button>
+                                            </div>
+                                        </div>
+                                        <br>
+                                        <div class="input-group">
+                                            <label class="checkbox-inline"><input type="checkbox" value="">Author</label>
+                                            <label class="checkbox-inline"><input type="checkbox" value="">Book title</label>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="space-100"></div>
+    <!-- Header-jumbotron-end -->
+</header>
