build home page

--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -2,16 +2,16 @@
     <!-- Header-background-markup -->
     <div class="header-bg relative home-slide">
         <div class="item">
-            <img src="images/slide/slide1.jpg" alt="library">
+            <img src="/images/slide/slide1.jpg" alt="library">
         </div>
         <div class="item">
-            <img src="images/slide/slide2.jpg" alt="library">
+            <img src="/images/slide/slide2.jpg" alt="library">
         </div>
         <div class="item">
-            <img src="images/slide/slide3.jpg" alt="library">
+            <img src="/images/slide/slide3.jpg" alt="library">
         </div>
         <div class="item">
-            <img src="images/slide/slide4.jpg" alt="library">
+            <img src="/images/slide/slide4.jpg" alt="library">
         </div>
     </div>
     <!-- Mainmenu-markup-start -->
@@ -26,7 +26,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <!--Logo-->
-                    <a href="#sc1" class="navbar-left show"><img src="images/logo.png" alt="library"></a>
+                    <a href="#sc1" class="navbar-left show"><img src="/images/logo.png" alt="library"></a>
                     <div class="space-10"></div>
                 </div>
                 <!--Toggle-button-->
@@ -37,7 +37,7 @@
                         <ul class="list-unstyled">
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <img src="images/active_user.png" class="img-circle img-thumbnail" alt="library" />
+                                    <img src="/images/active_user.png" class="img-circle img-thumbnail" alt="library" />
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
