--- a/views/layout/template.ejs
+++ b/views/layout/template.ejs
@@ -8,36 +8,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+    <link rel="shortcut icon" type="image/ico" href="/images/favicon.ico" />
 
     <!-- Plugin-CSS -->
     <link rel="stylesheet" href="/bower/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/bower/owl.carousel/dist/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/icofont.css">
+    <link rel="stylesheet" href="/css/icofont.css">
     <link rel="stylesheet" href="/bower/animate.css/animate.min.css">
     <link rel="stylesheet" href="/bower/cardslider/dist/css/cardslider.css">
     <link rel="stylesheet" href="/bower/ResponsiveSlides/responsiveslides.css">
 
     <!-- Main-Stylesheets -->
     <link rel="stylesheet" href="/bower/normalize-css/normalize.css">
-    <link rel="stylesheet" href="css/overright.css">
-    <link rel="stylesheet" href="css/theme.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="/css/overright.css">
+    <link rel="stylesheet" href="/css/theme.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <script src="javascripts/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
 <body data-spy="scroll" data-target="#mainmenu" data-offset="50">
 
 <!--Begin header-->
-<% include header.ejs %>
+<%- include header.ejs %>
 <!--End header-->
 
 <%- body %>
 
 <!--Begin footer-->
-<% include footer.ejs %>
+<%- include footer.ejs %>
 <!--End footer-->
 
 <!-- Vandor-JS -->
@@ -52,7 +52,7 @@
 <script src="/bower/wow/dist/wow.min.js"></script>
 <script src="/javascripts/plugins.js"></script>
 <!-- Active-JS -->
-<script src="javascripts/main.js"></script>
+<script src="/javascripts/main.js"></script>
 
 </body>
 
