--- a/views/layout/template.ejs
+++ b/views/layout/template.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FBook - Framgia</title>
+    <title><%= typeof pageTitle !== 'undefined' ? pageTitle + ' - FBook' : 'FBook - Framgia' %></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
