--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,11 +18,15 @@
         <div class="row">
             <% if (section.data.length > 0 ) { %>
             <% section.data.forEach(function (book, index) { %>
-            <div class="col-xs-12 col-md-6 wow fadeInLeft" data-wow-delay="0.<%= index + 1%>s">
+            <div class="col-xs-12 col-md-4 wow fadeInLeft" data-wow-delay="0.<%= index + 1%>s">
                 <div class="category-item well yellow">
                     <div class="media">
                         <div class="media-left">
-                            <img src="<%# book.image.thumb_path %>" class="media-object" alt="">
+                            <% if (book.image) { %>
+                            <img src="<%= book.image.thumb_path%>" class="media-object" alt="">
+                            <% } else { %>
+                            <img src="/images/book_thumb_default.jpg" class="media-object" alt="">
+                            <% } %>
                         </div>
                         <div class="media-body">
                             <h5 title="<%= book.title %>"><%= (book.title.length > 20) ? book.title.substring(0, 20) + ' ...' : book.title %></h5>
