--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -66,6 +66,11 @@
                         <li class="active">
                             <a href="#sc1">Home</a>
                         </li>
+                        <% if (!access_token) { %>
+                            <li>
+                                <a href="/login">Login with Framgia</a>
+                            </li>
+                        <% } %>
                         <li>
                             <a href="#sc2">About</a>
                         </li>
