--- a/views/layout/template.ejs
+++ b/views/layout/template.ejs
@@ -40,14 +40,14 @@
 <%- include footer.ejs %>
 <!--End footer-->
 
-<!-- Vandor-JS -->
+<!-- Vendor-JS -->
 <script type="text/javascript">
     var API_PATH = "<%= configs.api_base_url %>";
 </script>
-<script src="/bower/jquery/dist/jquery.min.js"></script>
+<script src="/bower/jquery-1.12.4.min/index.js"></script>
 <script src="/bower/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- Plugin-JS -->
-<script src="/bower/owl.carousel/dist/owl.carousel.min.js"></script>
+<script src="/javascripts/owl.carousel.min.js"></script>
 <script src="/bower/ResponsiveSlides/responsiveslides.min.js"></script>
 <script src="/bower/cardslider/dist/js/jquery.cardslider.min.js"></script>
 <script src="/bower/twbs-pagination/jquery.twbsPagination.min.js"></script>
