--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -8,11 +8,11 @@
     Version: 1.0
 
 -----------------------------------------------------------------------------------
-    
+
     CSS INDEX
     ===================
     1. Google font
-	2. Theme Default CSS (body, link color, section etc)   
+	2. Theme Default CSS (body, link color, section etc)
 -----------------------------------------------------------------------------------*/
 
 
@@ -91,4 +91,50 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
     -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+}
+
+#search-book {
+   width: 100%;
+   height: 30px;
+   padding: 8px 12px;
+   font-size: 24px;
+   line-height: 30px;
+   border: 2px solid #ccc;
+   -webkit-border-radius: 8px;
+       -moz-border-radius: 8px;
+        border-radius: 8px;
+   outline: none;
+}
+
+.search-result {
+    max-height: 200px;
+    overflow: auto;
+}
+
+#data-search {
+    /* Remove default list styling */
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+}
+
+#data-search li a {
+    border: 1px solid #ddd; /* Add a border to all links */
+    margin-top: -1px; /* Prevent double borders */
+    background-color: #f6f6f6; /* Grey background color */
+    padding: 12px; /* Add some padding */
+    text-decoration: none; /* Remove default text underline */
+    font-size: 18px; /* Increase the font-size */
+    color: black; /* Add a black text color */
+    display: block; /* Make it into a block element to fill the whole list */
+}
+
+#data-search li a.header {
+    background-color: #e2e2e2; /* Add a darker background color for headers */
+    cursor: default; /* Change cursor style */
+}
+
+#data-search li a:hover:not(.header) {
+    background-color: #eee; /* Add a hover effect to all links, except for headers */
 }
