--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -16,13 +16,15 @@
         <div class="row">
             <div class="col-xs-12 col-md-6 book-list-position padding60  ">
                 <div class="book-list-photo ">
-                    <div class="book-list">
-                        <% data.item.media.forEach(function (image) { %>
-                        <div class="book_item">
-                            <img src="<%= image.web.medium_path %>" alt="library">
+                    <% if (typeof(data.item.media) != 'undefined') { %>
+                        <div class="book-list">
+                            <% data.item.media.forEach(function (image) { %>
+                            <div class="book_item">
+                                <img src="<%= image.web.medium_path %>" alt="library">
+                            </div>
+                            <% }) %>
                         </div>
-                        <% }) %>
-                    </div>
+                    <% } %>
                 </div>
                 <div class="bookslide_nav">
                     <i class="icofont icofont-long-arrow-left testi_prev"></i>
