--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -123,27 +123,17 @@
                     <div class="panel">
                         <div class="panel-heading">
                             <ul class="nav nav-tabs">
-                                <li class="active"><a data-toggle="tab" href="#book">Search Book</a></li>
+                                <li><a data-toggle="tab" href="#book">Search Book</a></li>
                             </ul>
                         </div>
                         <div class="panel-body">
-                            <div class="tab-content">
-                                <div class="tab-pane fade in active" id="book">
-                                    <form action="#">
-                                        <div class="input-group">
-                                            <input type="text" class="form-control" placeholder="Enter book name">
-                                            <div class="input-group-btn">
-                                                <button type="submit" class="btn btn-primary"><i class="icofont icofont-search-alt-2"></i></button>
-                                            </div>
-                                        </div>
-                                        <br>
-                                        <div class="input-group">
-                                            <label class="checkbox-inline"><input type="checkbox" value="">Author</label>
-                                            <label class="checkbox-inline"><input type="checkbox" value="">Book title</label>
-                                        </div>
-                                    </form>
-                                </div>
+                            <div class="category-container col-md-12">
+                                <input type="text" id="search-book"/>
                             </div>
+                            <div class="search-result col-md-12">
+                                <ul id="data-search"></ul>
+                            </div>
+
                         </div>
                     </div>
                 </div>
