--- a/views/layout/template.ejs
+++ b/views/layout/template.ejs
@@ -40,11 +40,11 @@
 <%- include footer.ejs %>
 <!--End footer-->
 
-<!-- Vendor-JS -->
+<!-- Vandor-JS -->
 <script type="text/javascript">
     var API_PATH = "<%= configs.api_base_url %>";
 </script>
-<script src="/bower/jquery-1.12.4.min/index.js"></script>
+<script src="/bower/jquery/dist/jquery.min.js"></script>
 <script src="/bower/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- Plugin-JS -->
 <script src="/javascripts/owl.carousel.min.js"></script>
@@ -56,6 +56,7 @@
 <script src="/javascripts/plugins.js"></script>
 <!-- Active-JS -->
 <script src="/javascripts/main.js"></script>
+<script src="/javascripts/books/search.js" type="text/javascript"></script>
 
 <% if(locals.appjs) { %>
 <%- appjs %>
