--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -86,7 +86,7 @@
                             <% data.item.reviews_detail_book.forEach(function (review) { %>
                             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
                                 <div class="event-item wow fadeInRight">
-                                    <h4 class="show tip-left">July 20,2017 <span class="">02.30 Am</span></h4>
+                                    <h4 class="show tip-left"><%= review.created_at %></h4>
                                     <div class="well">
                                         <div class="media">
                                             <div class="media-left">
@@ -98,7 +98,7 @@
                                             </div>
                                             <div class="media-body">
                                                 <div class="space-10"></div>
-                                                <a href="books.html"><h4 class="media-heading"><%= review.user.name %></h4></a>
+                                                <a href="javascript:void(0)"><h4 class="media-heading"><%= review.user.name %></h4></a>
                                                 <div class="space-10"></div>
                                                 <ul class="list-inline list-unstyled rating-star">
                                                     <li class="active"><i class="icofont icofont-star"></i> <%= review.star %> / <%= configs.default_book_star %></li>
@@ -117,28 +117,38 @@
                             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
                                 <h4><strong>Add review</strong></h4>
                             </div>
-                            <form action="#">
-                                <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
-                                    <div class="form-group">
-                                        <label for="name">Name</label>
-                                        <input type="text" id="name" class="form-control bg-info" placeholder="Enter your name...">
-                                    </div>
-                                </div>
-                                <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
-                                    <div class="form-group">
-                                        <label for="email">Email</label>
-                                        <input type="email" id="email" class="form-control bg-info" placeholder="Enter your email...">
-                                    </div>
-                                </div>
+                            <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
+                                <%- include ../shared/validator_errors.ejs %>
+                            </div>
+                            <form action="/books/review/<%= data.item.id %>" id="form-review" method="post">
                                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
                                     <div class="form-group">
                                         <label for="content">Content</label>
-                                        <textarea name="content" id="content" class="form-control bg-info" cols="50" rows="5" placeholder="Enter your review..."></textarea>
+                                        <textarea name="content" id="content" class="form-control bg-info" cols="50" rows="5" placeholder="Enter your review..." required></textarea>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
+                                    <div class="form-group">
+                                        <label class="radio-inline">
+                                            <input type="radio" name="star" value="1">1 Star
+                                        </label>
+                                        <label class="radio-inline">
+                                            <input type="radio" name="star" value="2">2 Star
+                                        </label>
+                                        <label class="radio-inline">
+                                            <input type="radio" name="star" value="3">3 Star
+                                        </label>
+                                        <label class="radio-inline">
+                                            <input type="radio" name="star" value="4">4 Star
+                                        </label>
+                                        <label class="radio-inline">
+                                            <input type="radio" name="star" value="5">5 Star
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="space-20"></div>
                                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
-                                    <button type="submit" class="btn btn-primary hover-btn-default">Create Accout <i class="fa fa-long-arrow-right"></i></button>
+                                    <button type="submit" class="btn btn-primary hover-btn-default">Create Account <i class="fa fa-long-arrow-right"></i></button>
                                 </div>
                             </form>
                         </div>
@@ -149,7 +159,6 @@
                             <% data.item.user_reading_book.forEach(function (user) {%>
                             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
                                 <div class="event-item wow fadeInRight">
-                                    <h4 class="show tip-left">July 20,2017 <span class="">02.30 Am</span></h4>
                                     <div class="well">
                                         <div class="media">
                                             <div class="media-left">
@@ -181,7 +190,6 @@
                             <% data.item.users_waiting_book.forEach(function (user) { %>
                             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
                                 <div class="event-item wow fadeInRight">
-                                    <h4 class="show tip-left">July 20,2017 <span class="">02.30 Am</span></h4>
                                     <div class="well">
                                         <div class="media">
                                             <div class="media-left">
@@ -213,3 +221,8 @@
     </div>
     <div class="space-100"></div>
 </section>
+
+<%- contentFor('appjs') %>
+<script type="text/javascript">
+    $('#form-review').validate();
+</script>
