--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,18 +23,18 @@
                     <div class="media">
                         <div class="media-left">
                             <% if (book.image !== null) { %>
-                            <img src="<%= book.image.web.thumbnail_path %>" class="media-object" alt="">
+                            <img src="<%= book.image.web.thumbnail_path %>" class="media-object" alt="<%= book.title %>">
                             <% } else { %>
-                            <img src="/images/book_thumb_default.jpg" class="media-object" alt="">
+                            <img src="/images/book_thumb_default.jpg" class="media-object" alt="<%= book.title %>">
                             <% } %>
                         </div>
                         <div class="media-body">
-                            <h5 title="<%= book.title %>"><%= (book.title.length > 20) ? book.title.substring(0, 20) + ' ...' : book.title %></h5>
-                            <h6>By <%= book.author %></h6>
+                            <h5 title="<%= book.title %>"><%= getString(book.title, configs.book.title_limit_characters) %></h5>
+                            <h6 title="<%= book.author %>">By <%= getString(book.author, configs.book.author_limit_characters) %></h6>
                             <div class="space-10"></div>
                             <ul class="list-inline list-unstyled rating-star">
                                 <li class="active"><i class="icofont icofont-star"></i></li>
-                                <strong><%= book.avg_star %> / <%= configs.default_book_star %></strong>
+                                <strong><%= book.avg_star %> / <%= configs.book.default_star %></strong>
                             </ul>
                             <div class="space-10"></div>
                             <p>
