--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -145,13 +145,17 @@
                             </ul>
                         </div>
                         <div class="panel-body">
+                            <div class="search-result col-md-12">
+                                <label class="radio-inline"><input type="radio" name="type-search" value="title" checked="true">Title</label>
+                                <label class="radio-inline"><input type="radio" name="type-search" value="author">Author</label>
+                                <label class="radio-inline"><input type="radio" name="type-search" value="description">Description</label>
+                            </div>
                             <div class="category-container col-md-12">
                                 <input type="text" id="search-book"/>
                             </div>
                             <div class="search-result col-md-12">
                                 <ul id="data-search"></ul>
                             </div>
-
                         </div>
                     </div>
                 </div>
