--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -62,10 +62,7 @@
                         <p><%= data.item.description %></p>
                         <div class="space-20"></div>
                         <h4 class="tip-left">Rating</h4>
-                        <ul class="list-inline list-unstyled rating-star">
-                            <li class="active"><i class="icofont icofont-star"></i></li>
-                        </ul>
-                        <p><%= data.item.avg_star %> / <%= configs.book.default_star %></p>
+                        <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" value=<%= data.item.avg_star %> disabled="true" data-step="0.01" data-size="xs">
                         <div class="space-20"></div>
                         <a href="books.html" class="btn btn-primary hover-btn-default">Booking</a>
                     </div>
@@ -136,7 +133,7 @@
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
-                                <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" data-step="1" data-size="xs">
+                                <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" data-step="0.01" data-size="xs">
                                 </div>
                                 <div class="space-20"></div>
                                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
