--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         <div class="row">
             <% if (section.data.length > 0 ) { %>
             <% section.data.forEach(function (book, index) { %>
-            <div class="col-xs-12 col-md-4 wow fadeInLeft" data-wow-delay="0.<%= index + 1 %>s">
+            <div class="col-xs-12 col-md-6 wow fadeInLeft" data-wow-delay="0.<%= index + 1 %>s">
                 <div class="category-item well yellow">
                     <div class="media">
                         <div class="media-left">
@@ -39,11 +39,7 @@
                             <% } else {%>
                                 <h6>By Framgia</h6>
                             <% } %>
-                            <div class="space-10"></div>
-                            <ul class="list-inline list-unstyled rating-star">
-                                <li class="active"><i class="icofont icofont-star"></i></li>
-                                <strong><%= book.avg_star %> / <%= configs.book.default_star %></strong>
-                            </ul>
+                            <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" value=<%= book.avg_star %> disabled="true" data-step="0.01" data-size="xs">
                             <div class="space-10"></div>
                             <p>
                                 <%= book.overview %>
@@ -69,3 +65,10 @@
 </section>
 <!--End section-->
 <% }) %>
+
+<%- contentFor('appjs') %>
+<script src="/bower/bootstrap-star-rating/js/star-rating.js"></script>
+
+<%- contentFor('appCss') %>
+<link href="/bower/bootstrap-star-rating/css/star-rating.css" rel="stylesheet" type="text/css">
+<link href="/bower/bootstrap-star-rating/css/theme-krajee-fa.css" rel="stylesheet" type="text/css">
