--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -64,7 +64,20 @@
                         <h4 class="tip-left">Rating</h4>
                         <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" value=<%= data.item.avg_star %> disabled="true" data-step="0.01" data-size="xs">
                         <div class="space-20"></div>
-                        <a href="books.html" class="btn btn-primary hover-btn-default">Booking</a>
+                        <% if (data.item.status === 1) { %>
+                            <% if (
+                                typeof(user) !== 'undefined' &&
+                                typeof(data.item.user_reading_book) !== 'undefined' &&
+                                data.item.user_reading_book.length > 0  &&
+                                user.id === data.item.user_reading_book[0].id) {
+                            %>
+                            <button class="btn btn-primary hover-btn-default btn-xs" id="booking-book" data-id="<%= data.item.id %>" data-status="3">Return Book</button>
+                            <% } else { %>
+                            <button class="btn btn-primary hover-btn-default btn-xs" id="booking-book" data-id="<%= data.item.id %>" data-status="2">Booking</button>
+                            <% } %>
+                        <%  } else { %>
+                            <button class="btn btn-primary hover-btn-default btn-xs" id="booking-book" data-id="<%= data.item.id %>" data-status="1">Add to Waiting</button>
+                        <% } %>
                     </div>
                 </div>
             </div>
@@ -145,7 +158,7 @@
                     <div class="tab-pane fade" id="user_reading">
                         <div class="row event-list">
                             <% if (data.item.user_reading_book !== null) { %>
-                            <% data.item.user_reading_book.forEach(function (user) {%>
+                            <% data.item.user_reading_book.forEach(function (user) { %>
                             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
                                 <div class="event-item wow fadeInRight">
                                     <div class="well">
@@ -212,8 +225,17 @@
 </section>
 
 <%- contentFor('appjs') %>
+<script src="/javascripts/books/book.js" type="text/javascript"></script>
 <script type="text/javascript">
     $('#form-review').validate();
+
+    $('#booking-book').on('click', function (e) {
+        var status = $(this).attr('data-status');
+        var bookId = $(this).attr('data-id');
+
+        Book.booking(bookId,status);
+    });
+
 </script>
 <script src="/bower/bootstrap-star-rating/js/star-rating.js"></script>
 
